<resources>
    <string name="app_name">MyReceipts</string>
    <string name="receipt_title_hint">Enter a title for the receipt.</string>
    <string name="receipt_title_label">Receipt Title</string>
    <string name="receipt_shop_hint">Enter the name of the shop.</string>
    <string name="receipt_shop_label">Shop Name</string>
    <string name="receipt_comment_hint">Enter a comment on this receipt.</string>
    <string name="receipt_comment_label">Comment</string>
    <string name="receipt_details_label">Details</string>
    <string name="date_picker_title">Date of purchase:</string>
    <string name="new_receipt">New Receipt</string>
    <string name="receipt_help">Receipt Help</string>
    <string name="receipt_help_url">https://en.wikipedia.org/wiki/Receipt</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d receipt(s)</string>
    <string name="receipt_report_text">Send Receipt Report</string>
    <string name="receipt_report">The receipt "%1$s" was received from a purchase made on %2$s.</string>
    <string name="receipt_report_subject">MyReceipts - Receipt Report</string>
    <string name="send_report">Send receipt report via</string>
    <string name="receipt_location_label">Location</string>
    <string name="receipt_map_label">Show In Map</string>
    <string name="receipt_latitude">Latitude: %1$s</string>
    <string name="receipt_longitude">Longitude: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>
