<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/receipt_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>
            <ImageButton
                android:id="@+id/receipt_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_title_label"/>
            <EditText
                android:id="@+id/receipt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receipt_title_hint"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_shop_label"/>
    <EditText
        android:id="@+id/receipt_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_shop_hint"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_comment_label"/>
    <EditText
        android:id="@+id/receipt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_comment_hint"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_details_label"/>
    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/receipt_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_report_text"/>
</LinearLayout>